--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -655,4 +655,4 @@ body {
   animation: pulsate 1s infinite;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=style.comp.css.map */
